--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,39 +1,56 @@
 input:focus {
     box-shadow: 1px 1px 2px 0 red;
-  }
+}
 
-  #btn-search {
-    background-image: linear-gradient(to right, #DA22FF 0%, #9733EE  51%, #DA22FF  100%);
+#btn-search {
+    background-image: linear-gradient(to right, #DA22FF 0%, #9733EE 51%, #DA22FF 100%);
     width: 100%;
-    height:2.25em;
+    height: 100%;
     text-align: center;
     transition: 0.5s;
     background-size: 200% auto;
-    color: white;            
-    
+    color: white;
     border-radius: 10px;
-    
+    border-color: white !important;
 }
 
 #btn-search:hover {
-    background-position: right center; /* change the direction of the change here */
+    background-position: right center;
+    /* change the direction of the change here */
     color: #fff;
     text-decoration: none;
+    
 }
 
 input {
     border-radius: 7px !important;
     height: 50px !important;
-    border-color: #DA22FF !important;
-
 }
 
 input:focus {
     border-radius: 7px;
     border-color: #DA22FF !important;
 }
+
 input:active {
     border-radius: 7px;
     border-color: #DA22FF !important;
-    
+
+}
+
+#box-for-result-search {
+    width: 100%;
+    height: 50%;
+}
+
+.light-small-text-result {
+    color: #fff !important;
+    font-size: 14px;
+    text-align: left;
+    line-height: normal;
+}
+
+#light-text-result {
+    color: #fff;
+    font-size: 26px;
 }
