--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
                 <li><a id="without-decor" href="search.html"><img style= "margin-right: 10px;" src="../static/images/search.png">Поиск</a></li>
                 <li><a id="without-decor"><img style= "margin-right: 10px;" src="../static/images/add.png">Добавить материал</a></li>
                 <li><a id="without-decor"><img style= "margin-right: 10px;" src="../static/images/tasks.png">Задачи</a></li>
-                <li><a id="without-decor"><img style= "margin-right: 10px;" src="../static/images/menu.png">Предметы</a></li>
+                <li><a id="without-decor"><img style= "margin-right: 10px;" src="../static/images/books.png">Предметы</a></li>
               </ul>
             </aside>
           </div>
@@ -100,7 +100,7 @@
                     id="gray-themes-for-box"
                     style="display: inline-block; width: 100%"
                   >
-                    <div class="columns">
+                    <div class="columns is-vcentered">
                       <div class="column">
                         <span class="icon is-small">
                           <i
@@ -110,7 +110,7 @@
                           ></i>
                         </span>
                       </div>
-                      <div class="is-three-quarters" id="position-left">
+                      <div class="column is-three-fifths" id="position-left">
                         <strong id="light-text">
                           Как писать красивый код?</strong
                         >
@@ -119,7 +119,7 @@
                       <div class="column">
                         <div class="buttons">
                           <a class="button" id="btn-look" href="login.html">
-                            <strong style="font-size: 12px">Просмотр</strong>
+                            <strong style="">Просмотр</strong>
                           </a>
                         </div>
                       </div>
@@ -129,7 +129,7 @@
 
                   <!-- Block theme  [Start]-->
                   <div class="box" id="gray-themes-for-box">
-                    <div class="columns">
+                    <div class="columns is-vcentered">
                       <div class="column">
                         <span class="icon is-small">
                           <i
@@ -139,7 +139,7 @@
                           ></i>
                         </span>
                       </div>
-                      <div class="is-three-quarters" id="position-left">
+                      <div class="column  is-three-fifths" id="position-left">
                         <strong id="light-text"
                           >Я хуй его знает, честно ...</strong
                         >
@@ -148,7 +148,7 @@
                       <div class="column">
                         <div class="buttons">
                           <a class="button" id="btn-look" href="login.html">
-                            <strong style="font-size: 12px">Просмотр</strong>
+                            <strong>Просмотр</strong>
                           </a>
                         </div>
                       </div>
