--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -17,6 +18,7 @@
     <link rel="stylesheet" href="../static/css/main_css_for_home.css" />
     <link rel="stylesheet" href="../static/css/menu.css" />
     <link rel="stylesheet" href="../static/css/search.css" />
+    <link rel="stylesheet" href="../static/css/tasks.css" />
   </head>
   <body>
     <div class="notification is-primary is-fullheight" id="black-theme">
@@ -68,7 +70,7 @@
                 <a id="without-decor"
                   ><img
                     style="margin-right: 10px"
-                    src="../static/images/menu.png"
+                    src="../static/images/books.png"
                   />Предметы</a
                 >
               </li>
@@ -96,7 +98,11 @@
               <div class="column is-three-quarters">
                 <div class="field is-grouped">
                   <p class="control is-expanded">
-                    <input class="input" type="text" placeholder="Find a repository">
+                    <input
+                      class="input"
+                      type="text"
+                      placeholder="Find a repository"
+                    />
                   </p>
                 </div>
               </div>
@@ -111,15 +117,100 @@
           </div>
 
           <!-- Block with result [Start]-->
-          <div class="box">
+          <div class="box" id="box-for-result-search">
             <h5 class="title is-5">Результат поиска</h5>
-            <div class="columns">
-                
-              
-            </div>
+            <!-- Block result-search  [Start]-->
+            <a href="">
+              <div class="columns">
+                <div class="column">
+                  <div
+                    class="box"
+                    id="gray-themes-for-box"
+                    style="display: inline-block; width: 100%"
+                  >
+                    <div class="columns is-vcentered">
+                      <div class="column">
+                        <a id="without-decor"
+                          ><img
+                            style="margin-right: 10px"
+                            src="../static/images/result.png"
+                        /></a>
+                      </div>
+                      <div class="column is-three-quarters" id="position-left">
+                        <strong id="light-text-result">
+                          Как писать красивый код?</strong
+                        >
+                        <p class="subtitle light-small-text-result">@Bambula</p>
+                        <p class="subtitle light-small-text-result">
+                          10 оценок
+                        </p>
+                      </div>
+                      <div class="column">
+                        <div class="buttons">
+                          <a
+                            class="button"
+                            id="btn-search"
+                            style="border-color: rgb(50, 52, 67) !important"
+                            href="login.html"
+                          >
+                            <strong style="font-size: 12px">Просмотр</strong>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <!-- Block  result-search   [End]-->
+
+            <!-- Block result-search  [Start]-->
+            <a href="">
+              <div class="columns">
+                <div class="column">
+                  <div
+                    class="box"
+                    id="gray-themes-for-box"
+                    style="display: inline-block; width: 100%"
+                  >
+                    <div class="columns is-vcentered">
+                      <div class="column">
+                        <a id="without-decor"
+                          ><img
+                            style="margin-right: 10px"
+                            src="../static/images/result.png"
+                        /></a>
+                      </div>
+                      <div class="column is-three-quarters" id="position-left">
+                        <strong id="light-text-result">
+                          Как писать красивый код?</strong
+                        >
+                        <p class="subtitle light-small-text-result">@Bambula</p>
+                        <p class="subtitle light-small-text-result">
+                          10 оценок
+                        </p>
+                      </div>
+                      <div class="column">
+                        <div class="buttons">
+                          <a
+                            class="button"
+                            id="btn-search"
+                            style="border-color: rgb(50, 52, 67) !important"
+                            href="login.html"
+                          >
+                            <strong style="font-size: 12px">Просмотр</strong>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <!-- Block  result-search   [End]-->
           </div>
           <!-- Block with result [End]-->
-         
         </div>
         <!-- Block Work table [End]-->
 
